# yolo-rs

./: Cargo.toml  flake.nix
examples/yolo-cli/: Cargo.toml
examples/yolo-cli/src/: main.rs
src/: lib.rs  model.rs
