[package]
name = "yolo-rs"
description = "YOLO object detection model in Rust. Currently on YOLO v11."
authors = ["Yi-Jyun Pan <pan93412@gmail.com>"]
keywords = ["yolo", "object-detection", "onnx", "rust", "machine-learning"]
categories = ["science"]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pan93412/yolo-rs"
readme = "README.md"
exclude = [".github", "examples", ".envrc", "devenv*"]

[features]
rocm = ["ort/rocm"]
debug = []

[dependencies]
arcstr = "1.2.0"
image = "0.25.9"
ndarray = "0.17"
ort = "2.0.0-rc.12"
thiserror = "2.0.18"

[workspace]
members = [
	'examples/yolo-cli',
]
